uoproxy (0.3.1) unstable; urgency=low

  * added SOCKS4 proxy support
  * no character list on attach
  * fixed crash when output buffer is full

 --

uoproxy (0.3) unstable; urgency=low

  * support binding on an IP address
  * fix typo in log message
  * support the "Gump Packed" packet (0xdd)
  * return PA_DROP instead of PA_DELETED after attach
  * don't re-query the login server for attaching secondary client
  * allow short version string
  * remember mobile flags
  * added option "light"

 -- Max Kellermann <max@duempel.org>  Mon, 01 Mar 2010 22:44:33 +0100

uoproxy (0.2) unstable; urgency=low

  * fixed struct uo_packet_create_character
  * show which packet caused connection abort
  * only disconnect the faulty client on protocol error
  * send cached client version during reconnect; this fixed game login on
    servers supporting client version 6
  * use libevent
  * write buffering, enable TCP_NODELAY
  * forward client version packets only if they were requested by the server
  * support client 6.0.1.7
  * auto-reconnect after invalid packet from server
  * log invalid packets
  * do asynchronous writes
  * new command "%verbose" modifies the log level
  * hide internal IP address in antispy mode

 -- Max Kellermann <max@duempel.org>  Tue, 25 Dec 2007 12:40:32 +0100

uoproxy (0.1.3) unstable; urgency=low

  * increased maximum packet size from 8 kB to 32 kB
  * registered packet 0xDC
  * consider unregistered packets invalid
  * LSB init script
  * don't use cdbs
  * added debian/copyright
  * moved uoproxy binary to /usr/sbin

 -- Max Kellermann <max@duempel.org>  Sun, 29 Oct 2006 19:22:28 +0100

uoproxy (0.1.2) unstable; urgency=low

  * auto-close gumps in multi client mode
  * sync walking with walk_force instead of mobile_update; this fixes the
    z-walk bug
  * copy username and password before sending internal server list
  * local port defaults to 2593
  * added #includes required on FreeBSD
